--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="banner-left">
             <div class="banner-left-main">
                 <h1 class="banner-title">Get body in
-                    <br> <span class="shape-stay"><span class="span-style">shape</span><span class="">  & stay</span>
+                    <br> <span class="shape-stay"><span class="span-style">shape</span><span class="span-style2">  & stay</span>
                    </span> <span class="">healthy</span> </h1>
             </div>
                <div class="body-para"><p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p></div>
